Code refactor
 - One unified controller handling the planet domain
 - Created planet dto to avoid the films to be manually inserted.
- Removed the films from the database.
- Added pagination to search by name and list planets, to avoid overload and improve performance
- Many unit test improvements.